--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 /*!
-Theme Name: BuddyX
+Theme Name: Buddyx
 Theme URI: https://wbcomdesigns.com/downloads/buddyx
 Author: wbcomdesigns,vapvarun
 Author URI: https://wbcomdesigns.com
 Description: Free theme for your community with BuddyPress.
-Version: 2.9.0
+Version: 2.6.0
+Requires at least: 4.8
+Tested up to: 5.4.1
+Requires PHP: 7.0
 License: GNU General Public License v3.0 (or later)
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: buddyx
