updated tags and screenshot licence

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Requires PHP: 7.0
 License: GNU General Public License v3.0 (or later)
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: buddyx
-Tags: translation-ready
+Tags: translation-ready, Block Editor Styles, Blog, Custom Background, Custom Colors, Custom Logo, Custom Menu, Editor Style, Featured Images, Footer Widgets, Full Width Template, One Column, RTL Language Support, Sticky Post, Theme Options, Threaded Comments, Wide Blocks, BuddyPress
 
 This theme, like BuddyPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share
