--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Buddyx
 Theme URI: https://wbcomdesigns.com/downloads/buddyx
 Author: wbcomdesigns,vapvarun
-Author URI: https://wbcomdesigns.com
+Author URI: https://github.com/vapvarun/buddyx
 Description: Free theme for your community with BuddyPress.
 Version: 2.9.1
 Requires at least: 4.8
