update missing translation string and source files

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Buddyx
+Theme Name: BuddyX
 Theme URI: https://wbcomdesigns.com/downloads/buddyx
 Author: wbcomdesigns,vapvarun
 Author URI: https://github.com/vapvarun/buddyx
