--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*!
 Theme Name: BuddyX
-Theme URI: https://wbcomdesigns.com/downloads/buddyx
+Theme URI: https://wordpress.org/themes/buddyx/
 Author: wbcomdesigns,vapvarun
 Author URI: https://github.com/vapvarun/buddyx
 Description: Free theme for your community with BuddyPress.
-Version: 2.9.2
+Version: 2.9.1
 Requires at least: 4.8
 Tested up to: 5.5.0
 Requires PHP: 7.0
