--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*!
 Theme Name: BuddyX
-Theme URI: https://wordpress.org/themes/buddyx/
+Theme URI: https://wbcomdesigns.com/downloads/buddyx-theme/
 Author: wbcomdesigns,vapvarun
 Author URI: https://github.com/vapvarun/buddyx
 Description: Free theme for your community with BuddyPress.
