--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /*!
 Theme Name: BuddyX
-Theme URI: https://wbcomdesigns.com/downloads/buddyx-theme/
+Theme URI: https://wordpress.org/themes/buddyx/
 Author: wbcomdesigns,vapvarun
 Author URI: https://github.com/vapvarun/buddyx
 Description: Free theme for your community with BuddyPress.
-Version: 2.9.4
+Version: 2.9.5
 Requires at least: 4.8
-Tested up to: 5.5.0
+Tested up to: 5.5.1
 Requires PHP: 7.0
 License: GNU General Public License v3.0 (or later)
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: buddyx
-Tags: translation-ready, BuddyPress
+Tags: one-column, two-columns, left-sidebar, right-sidebar, footer-widgets, blog, translation-ready, buddypress, custom-colors, featured-images, full-width-template, theme-options, e-commerce
 
 This theme, like BuddyPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share
