--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -22,6 +22,13 @@
     # BadgeOS
     # Buddypress Group Reviews
     # BuddyPress Activity Social Share
+    # BuddyPress Check-ins
+    # BuddyPress Quotes
+    # BuddyPress Polls
+    # BuddyPress Profile Pro
+    # BuddyPress Activity Social Share
+    # BuddyPress Birthday
+    # BuddyPress Member/Group Reviews
 --------------------------------------------------------------*/
 
 
@@ -1187,10 +1194,17 @@ div#buddypress .activity-read-more a:hover {
     padding-top: 0;
     position: relative;
     text-align: left;
+    display: flex;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 .activity-list .activity-item.has-comments .activity-content>.activity-meta.action {
     border-bottom: 1px solid var(--global-border-color);
+}
+
+.bp-list li .action .generic-button {
+    font-size: inherit;
 }
 
 .activity-list.bp-list .activity-item .activity-meta.action .generic-button {
@@ -2089,6 +2103,10 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content ul div
     margin: auto;
 }
 
+.buddypress.settings .profile-settings.bp-tables-user select {
+    width: auto;
+}
+
 
 /*--------------------------------------------------------------
 # Group Single
@@ -2645,6 +2663,10 @@ body #buddypress #item-header-cover-image span.activity {
     font-size: 14px;
 }
 
+.activity.gamipress-buddypress-points-label {
+    margin-left: 2px;
+}
+
 .users-header .gamipress-buddypress-achievements .gamipress-buddypress-achievement-type-label {
     margin-right: 10px;
     font-weight: 500;
@@ -2959,51 +2981,21 @@ table.badgeos-rank-table tfoot tr th {
     margin: 5px 0;
 }
 
-.buddyx-badge ul span {
-    display: block;
-    color: #111;
-}
-
-.buddyx-badge ul.profile-achievements-listing {
-    margin: 0;
-    list-style: none;
-    display: flex;
-    align-self: center;
-}
-
-.buddyx-badge ul.profile-achievements-listing li {
-    display: inline-block;
-    float: none;
-    margin: 5px 5px 0 0;
-    position: relative;
-}
-
-.buddyx-badge ul.profile-achievements-listing li .badgeos-item-thumb img {
-    width: 40px;
-    max-width: 40px;
-    height: 40px;
-}
-
-.buddyx-badge ul.profile-achievements-listing li#widget-achievements-listing-item-more {
-    margin-left: 10px;
+.buddyx-badge .ps-badgeos__list {
     display: flex;
     align-items: center;
+    flex-flow: row wrap;
 }
 
-.buddyx-badge ul.profile-achievements-listing li .widget-badgeos-item-title {
-    position: absolute;
-    bottom: -16px;
-    right: 0px;
-    left: 0;
-    margin: auto;
-    color: #111;
-    font-size: 12px;
-    white-space: nowrap;
-    opacity: 0;
+@media screen and (max-width: 782px) {
+    .buddyx-badge .ps-badgeos__list {
+        justify-content: center;
+    }
 }
 
-.buddyx-badge ul.profile-achievements-listing li:hover .widget-badgeos-item-title {
-    opacity: 1;
+.buddyx-badge .ps-badgeos__item img {
+    max-width: 36px;
+    margin: 5px 5px 0 0;
 }
 
 
@@ -3027,4 +3019,114 @@ table.badgeos-rank-table tfoot tr th {
 
 body:not(.logged-in) .activity-list .activity-item .activity-meta .bp-share-button {
     margin: 15px;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Check-ins
+--------------------------------------------------------------*/
+
+.bpchk-marker-container {
+    margin: 15px 0;
+}
+
+.bpchk-marker-container {
+    margin-right: 10px;
+}
+
+.bp-checkins.bp-checkin-panel {
+    width: 100%;
+    margin: 0 0 15px;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Quotes
+--------------------------------------------------------------*/
+
+.quote-btn {
+    margin: 15px 0;
+}
+
+.bp-nouveau .site-wrapper .bpquotes-bg-selection-div {
+    margin-bottom: 5px;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Polls
+--------------------------------------------------------------*/
+
+.bp-nouveau .site-wrapper .bpolls-html-container {
+    margin: 15px 0;
+}
+
+.wb-quote.bp-nouveau .site-wrapper .bpolls-html-container {
+    margin-left: 10px;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Profile Pro
+--------------------------------------------------------------*/
+
+.buddypress-wrap .profile .bp-widget abbr {
+    display: block;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--global-border-color);
+    cursor: auto;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Activity Social Share
+--------------------------------------------------------------*/
+
+body:not(.logged-in) .bp-share-btn.generic-button {
+    font-family: inherit;
+    font-size: 14px;
+    margin: 10px;
+    border-radius: 3px !important;
+    padding: 8px 12px;
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1.3;
+    border: 1px solid 1px solid var(--global-border-color);
+    outline: 0;
+    vertical-align: middle;
+    transition: all .2s linear;
+    margin: 15px !important;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Birthday
+--------------------------------------------------------------*/
+
+.birthday-item-content i {
+    margin-left: 5px;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Member/Group Reviews
+--------------------------------------------------------------*/
+
+.bupr-bp-member-review-no-popup-add-block #bupr_save_review,
+.buddypress .buddypress-wrap .bgr-group-review-no-popup-add-block .bgr-submit-review,
+.buddypress-wrap .bgr-group-review-no-popup-add-block .bgr-submit-review {
+    font-size: 14px;
+}
+
+.member-review-stars {
+    font-size: 14px;
+    margin: 5px 0 0;
+}
+
+.rating-bgr {
+    font-size: 14px;
 }
